--- a/home/view-header.html
+++ b/home/view-header.html
@@ -1,1 +1,49 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title><?=$pageTitle?></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      body{
+       background-color: rgb(253, 249, 216);
+     }
 
+     .navbar-expand-lg{
+      background-color: rgb(253, 249, 216);
+      color: rgb(253, 249, 216);
+     }
+
+      }
+    </style>
+  </head>
+  <body>
+    <div class ="container">
+      <nav class="navbar navbar-expand-lg bg-info-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" style="color: crimson;" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="quarterbacks.php">Quarterbacks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="widereceivers.php">Wide Receivers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="runningbacks.php">Running Backs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="qbs-with-wrs.php">Quarterbacks With Wide Receivers</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
